feat: add plugin tests (53 tests, zero mocks) and testing standards
Extract pure functions from Mojos into testable static methods:
- GenerateBomMojo: BomEntry record + buildBomXml() (14 tests)
- WsCheckpointMojo: ComponentSnapshot record + buildCheckpointYaml() (8 tests)
- GraphWorkspaceMojo: buildDotGraph() + componentColor() (12 tests)
- ReleaseSupport: validateRemotePath, siteDiskPath, branchToSitePath (19 tests)

Fix duplicate logic: WsReleaseMojo.bumpToNextSnapshot() replaced with
VersionSupport.deriveNextSnapshot() from ike-workspace-model.

Add "Testing Philosophy" section to IKE-MAVEN.md covering:
- No mocks by default; extract pure functions instead
- Why mock frameworks are a JVM compatibility liability (bytecode
  manipulation, JPMS module enforcement, preview feature breakage,
  GraalVM native image incompatibility)
- LLM-generated test data for domain-rich scenarios
- Fast resettable fixtures over mock doubles
- When mocks are genuinely necessary (external I/O only)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>